@@ -15,6 +15,7 @@ Bug fixes:
 * Automatic label detection did not choose column names when no variable labels were present for functions that accepted data frames as data argument.
 * `sjp.int` did not work with fitted models from class `lme`.
 * `sjt.xtab` did not show `NA` values for `showNA = TRUE`.
+* Table summary (chi-squared, phi, p) for `sjt.xtab` were wrong.
 * Due to rounding, total percentage in `sjt.xtab` could differ from 100%.
 * Minor fixes.
 
